# backup

DBengine/: main.go
DBengine/btree/: btree.go
DBengine/storage/: file_storage.go  storgae_test.go  wal.go
Vue shi/expense-0/: package-lock.json  package.json
byzantine/: Block.js  Txn.js  Util.js  Validators.js  Wallet.js  chain.js  config.js  package-lock.json  package.json
comm-sys/room-chat/: go.mod  main.go
gnark/: go.mod  go.sum  main.go  prrof.go
gnark/ID/: go.mod  id_circuit.go
gnark/bsc_header/: bsc_header.go  go.mod
gnark/circuit/: circuit.go
gnark/hash/: main.go
gnark/merkle/: merkle.go
gnark/prove/: prove.go
gnark/zkp/: circuit.go  go.mod  main.go
go-app/: compose.yaml
go-app/backend/: go.dockerfile  go.mod  go.sum  main.go
gochain/: main.go
golang/: file.go  future_plans  go.mod
golang/krypt/: keys.go
golang/network/: local_transport.go  server.go  transport.go
golang/some-shi/: shi.go
golang/ult prog/: job.go  main.go  master.go  task_queue.go  worker.go
js-blockchain/: Block.js  Blockchain.js  Main.js  Transaction.js  Wallet.js  blockchain.json  fsOps.js  package-lock.json  package.json
js-cryptography/: package-lock.json  package.json
microservices/: go.mod  main.go  products.go
nest-postgre/: package-lock.json  package.json
nofurder/: game.js  package-lock.json  package.json  server.js
project/: next.config.js  package-lock.json  package.json
rust-ground/rust-progs/: Cargo.toml
rust-ground/rust-progs/src/: x.rs
superteam/: keygen
westeros-ventures/: deets  go.mod  main.go  x
(+74 files in other folders)
